<resources>

    <string name="app_name">Team Sheet</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Team Sheet</string>
    <string name="loginText">Login</string>
    <string name="adminButton">Admin</string>
    <string name="staffMessagesText">All Staff Messages</string>
    <string name="backButton">Back</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="staffNumberHint">Please enter your staff ID number</string>
    <string name="adminNumberHint">Please enter your admin ID number</string>
    <string name="pinNumberHint">Please enter your PIN</string>
    <string name="clockIn">Sign In</string>
    <string name="welcomeText">Custom greeting will appear here</string>
    <string name="dateTimeWillAppear">10:00 23/02/2013</string>
    <string name="adminName">Admin name will appear here</string>
    <string name="cancelButton">Cancel</string>
    <string name="backspace">Backspace</string>
    <string name="exitText">Exit</string>
    <string name="staffName">Staff name will appear here</string>
    <string name="displayStaffList">Display Staff as list</string>
    <string name="takePhoto">Take Photo</string>
    <string name="clearMessages">Clear messages</string>
    <string name="savePhoto">Save photo to finish clocking in</string>
    <string name="adminLoggedInWelcome">Welcome to the YourWorkPlace admin section.</string>
    <string name="businessNameHint">Business name</string>
    <string name="contactNameHint">Contact name</string>
    <string name="emailAddressHint">E-mail address</string>
    <string name="databaseNameHint">Database name, no spaces or symbols</string>
    <string name="passwordHint">Password</string>
    <string name="setCompanyButton">Update details</string>
    <string name="forgotDetailsButton">Forgot your login details?</string>
    <string name="logoDescription">App logo</string>
    <string name="checkUpdates">Check for updates</string>
    <string name="exitButton">Exit</string>
    <string name="featureRequest">Feature request</string>
    <string name="adminIDHint">Please enter your Admin ID number</string>
    <string name="logIn">Login</string>
    <string name="registration">Team Sheet - Registration</string>
    <string name="addressLineOneHint">Address line one</string>
    <string name="addressLineTwoHint">Address line two</string>
    <string name="postcodeHint">Postcode</string>
    <string name="register">Register</string>
    <string name="alreadySignedUp">Already signed up?</string>
    <string name="fillindetails">Fill in your details</string>
    <string name="signin">Fill in your details to sign in</string>
    <string name="createAccount">Create a new account</string>
    <string name="enterButton">Enter</string>

</resources>