<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparentbackground"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/blackbar" ><TextView
            android:id="@+id/greetingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:maxLines="1"
            android:paddingLeft="30dip"
            android:textColor="#FFF"
            android:textColorLink="#FFF"
            android:textSize="20dip"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/dateTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_weight="0"
            android:gravity="right"
            android:maxLines="1"
            android:paddingRight="30sp"
            android:text="@string/dateTimeWillAppear"
            android:textColor="#FFF"
            android:textColorLink="#FFF"
            android:textSize="20dip"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativemainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center" >

        <EditText
            android:id="@+id/staffIDEditText"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/staffNumberHint"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/toplayout"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/staffIDEditText"
            android:layout_centerInParent="true" >

            <Button
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/three" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middlelayout"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/toplayout"
            android:layout_centerInParent="true" >

            <Button
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondbottomlayout"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/middlelayout"
            android:layout_centerInParent="true" >

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomlayout"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/secondbottomlayout"
            android:layout_centerInParent="true" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="106dip"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cancelButton" />

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="106dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/enterButton"
                android:layout_width="106dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enterButton" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>