<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#f00" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="20sp"
            android:paddingLeft="50sp"
            android:paddingRight="60sp"
            android:paddingTop="20sp"
            android:text="@string/registration"
            android:textColor="#FFF"
            android:textColorLink="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_extralarge"
        android:layout_marginRight="@dimen/padding_extralarge"
        android:layout_marginTop="@dimen/padding_extralarge"
        android:background="#000"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/fillindetails"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="50dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_extralarge"
                android:layout_weight="1"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/contactNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contactNameHint" />

                <EditText
                    android:id="@+id/businessNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/businessNameHint" />

                <EditText
                    android:id="@+id/addressLineOneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addressLineOneHint" />

                <EditText
                    android:id="@+id/addressLineTwoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addressLineTwoHint" />

                <EditText
                    android:id="@+id/postcodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postcodeHint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_extralarge"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/emailAddressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailAddressHint" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordHint" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/register" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>