<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="left"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#f00" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="20sp"
                android:paddingLeft="50sp"
                android:paddingRight="60sp"
                android:paddingTop="20sp"
                android:text="@string/adminLoggedInWelcome"
                android:textColor="#FFF"
                android:textColorLink="#FFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="50sp"
                android:text="@string/dateTimeWillAppear"
                android:textColor="#FFF"
                android:textColorLink="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/businessNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/businessNameHint"
                        android:inputType="text" >

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/contactNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactNameHint"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/emailAddressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailAddressHint"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/databaseNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/databaseNameHint"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passwordHint"
                        android:inputType="textVisiblePassword" />

                    <Button
                        android:id="@+id/setCompanyDetailsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/setCompanyButton" />

                    <Button
                        android:id="@+id/forgotDetailsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/forgotDetailsButton" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/padding_large"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/checkUpdateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/checkUpdates" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/exitButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:text="@string/exitButton" />

                        <Button
                            android:id="@+id/featureRequestButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:text="@string/featureRequest" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>


