<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="left"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="100dip"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButton" >

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#f00" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="20sp"
                android:paddingLeft="50sp"
                android:paddingRight="60sp"
                android:paddingTop="20sp"
                android:text="@string/staffMessagesText"
                android:textColor="#FFF"
                android:textColorLink="#FFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="50sp"
                android:text="@string/dateTimeWillAppear"
                android:textColor="#FFF"
                android:textColorLink="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/messagesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>

    </LinearLayout>

</LinearLayout>